--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: MetaRPC MT5 C# Documenation
 nav:
   - Home: index.md
-  - Account Information: : account.md
+  - Account Information: account.md
 theme:
   name: material
   palette:
