--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,9 @@ site_name: MetaRPC MT5 C# Documentation
 
 nav:
   - Home: index.md
-  - Account Information: account.md
+  - Account Information:
+      - AccountSummary: account/AccountSummary.md
+      - AccountInfoDouble: account/AccountInfoDouble.md
 
 theme:
   name: material
