--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,8 @@ nav:
   - Account Information:
       - AccountSummary: account/AccountSummary.md
       - AccountInfoDouble: account/AccountInfoDouble.md
-
+      -AccountInfoInteger: account/AccountInfoInteger.md
+      -AccountInfoString: account/AccountInfoString.md
 theme:
   name: material
   palette:
