--- a/MetaRPC.CSharpMT5.csproj
+++ b/MetaRPC.CSharpMT5.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore.Server" Version="2.71.0" />
     <PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
     <PackageReference Include="Grpc.Tools" Version="2.72.0">
@@ -17,5 +27,7 @@
     </PackageReference>
     <PackageReference Include="MetaRPC.MT5" Version="1.0.675" />
   </ItemGroup>
+
+ 
 
 </Project>
