--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,11 +7,15 @@ nav:
       - AccountInfoDouble: account/AccountInfoDouble.md
       - AccountInfoInteger: account/AccountInfoInteger.md
       - AccountInfoString: account/AccountInfoString.md
-  - Performing operations with orders:
+  - Performing operations:
       - Opened Orders: orders/OpenedOrders.md
       - Opened Orders Tickets: orders/OpenedOrdersTickets.md
       - Order History: orders/OrderHistory.md
       - Symbol Info Tick: orders/SymbolInfoTick.md
+  - Positions:
+      - Show Positions: Positions/ShowPositions.md
+
+
 
 theme:
   name: material
