--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,22 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Build Project
+        run: dotnet build MetaRPC.CSharpMT5.csproj -c Release
+
+      - name: Install XmlDocMarkdown
+        run: dotnet tool install -g XmlDocMarkdown
+
+      - name: Convert XML Docs to Markdown
+        run: |
+          mkdir -p docs/api
+          xmldocmd bin/Release/net8.0/MetaRPC.CSharpMT5.dll docs/api --source MetaRPC.CSharpMT5.csproj --visibility public
+
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
