--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,10 @@ jobs:
 
       - name: Install DocFX
         run: |
-          wget https://github.com/dotnet/docfx/releases/download/v2.70.1/docfx.zip
-          unzip docfx.zip -d docfx
-          echo "$(pwd)/docfx" >> $GITHUB_PATH
+          dotnet tool install -g docfx || dotnet tool update -g docfx
+          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-      - name: Generate Docs using DocFX
+      - name: Generate Docs with DocFX
         run: |
           docfx metadata
           docfx build
@@ -42,13 +41,14 @@ jobs:
       - name: Copy Generated Markdown to MkDocs
         run: |
           mkdir -p docs/api
-          cp -r _site/api/* docs/api/ || echo "No api content found"
+          cp -r _site/api/* docs/api/ || echo "No API files to copy"
 
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
 
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+      - name: Cache MkDocs dependencies
+        run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
 
       - uses: actions/cache@v4
         with:
@@ -59,5 +59,5 @@ jobs:
 
       - run: pip install mkdocs-material pymdown-extensions
 
-      - name: Deploy Docs
+      - name: Deploy MkDocs Site
         run: mkdocs gh-deploy --force --clean
