--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Configure Git Credentials
+      - name: Configure Git
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -25,51 +25,22 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
-      - name: Build Project
+      - name: Build project and generate XML docs
         run: dotnet build MetaRPC.CSharpMT5.csproj -c Release
 
-      - name: Install DocFX
-        run: |
-          dotnet tool install -g docfx || dotnet tool update -g docfx
-          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
+      - name: Install XmlDocMarkdown
+        run: dotnet tool install -g XmlDocMarkdown.Console
 
-      - name: Ensure docfx.json exists
-        run: |
-          if [ ! -f docfx.json ]; then
-            echo '{
-              "metadata": [{
-                "src": [{
-                  "files": ["**/*.csproj"],
-                  "exclude": ["**/bin/**", "**/obj/**"]
-                }],
-                "dest": "api"
-              }],
-              "build": {
-                "content": [
-                  { "files": [ "api/**.yml" ] },
-                  { "files": [ "api/index.md" ] }
-                ],
-                "dest": "_site"
-              }
-            }' > docfx.json
-          fi
-
-      - name: Generate Docs with DocFX
-        run: |
-          docfx metadata
-          docfx build
-
-      - name: Copy Generated Markdown to MkDocs
+      - name: Convert XML docs to Markdown
         run: |
           mkdir -p docs/api
-          cp -r _site/api/* docs/api/ || echo "No API files to copy"
+          xmldocmd bin/Release/net9.0/MetaRPC.CSharpMT5.dll docs/api --source MetaRPC.CSharpMT5.csproj --visibility public
 
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: '3.x'
 
-      - name: Cache MkDocs dependencies
-        run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
 
       - uses: actions/cache@v4
         with:
@@ -80,5 +51,5 @@ jobs:
 
       - run: pip install mkdocs-material pymdown-extensions
 
-      - name: Deploy MkDocs Site
+      - name: Deploy Docs to GitHub Pages
         run: mkdocs gh-deploy --force --clean
