--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -25,18 +26,16 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
-      - name: Build Project (with XML docs)
+      - name: Build C# Project
         run: dotnet build MetaRPC.CSharpMT5.csproj -c Release
 
-      - name: Install XmlDocMarkdown
-        run: |
-          dotnet tool install -g XmlDocMarkdown
-          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
+      - name: Restore XmlDocMarkdown tool
+        run: dotnet tool restore
 
-      - name: Generate Markdown from XML Docs
+      - name: Generate Markdown with XmlDocMarkdown
         run: |
           mkdir -p docs/api
-          xmldocmd bin/Release/net9.0/MetaRPC.CSharpMT5.dll docs/api --source MetaRPC.CSharpMT5.csproj --visibility public
+          dotnet tool run xmldocmd bin/Release/net9.0/MetaRPC.CSharpMT5.dll docs/api --source MetaRPC.CSharpMT5.csproj --visibility public
 
       - uses: actions/setup-python@v5
         with:
@@ -54,5 +53,5 @@ jobs:
 
       - run: pip install mkdocs-material pymdown-extensions
 
-      - name: Deploy Documentation to GitHub Pages
+      - name: Deploy Docs
         run: mkdocs gh-deploy --force --clean
