--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,25 +26,25 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
-      - name: Build Project (with XML Docs)
+      - name: Build C# Project
         run: dotnet build MetaRPC.CSharpMT5.csproj -c Release
 
-      - name: Restore XmlDocMarkdown CLI tool
+      - name: Restore XmlDocMarkdown CLI Tool
         run: dotnet tool restore
 
-      - name: Add local tools to PATH
+      - name: Add dotnet tools to PATH
         run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
       - name: Generate Markdown from XML Docs
         run: |
           mkdir -p docs/api
-          dotnet tool run xmldocmd bin/Release/net9.0/MetaRPC.CSharpMT5.dll docs/api --source MetaRPC.CSharpMT5.csproj --visibility public
+          dotnet tool run xmldocmarkdown bin/Release/net9.0/MetaRPC.CSharpMT5.dll docs/api --source MetaRPC.CSharpMT5.csproj --visibility public
 
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Cache MkDocs Dependencies
+      - name: Cache MkDocs dependencies
         run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
 
       - uses: actions/cache@v4
@@ -56,5 +56,5 @@ jobs:
 
       - run: pip install mkdocs-material pymdown-extensions
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy Docs to GitHub Pages
         run: mkdocs gh-deploy --force --clean
