--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,7 @@ site_name: MetaRPC MT5 C# Documentation
 
 nav:
   - Home: index.md
-  - API Reference:
-      - MT5Account: api/MetaRPC.CSharpMT5.md
+  - API Reference: api/MetaRPC.CSharpMT5.md
   - Account Information:
       - AccountSummary: account/AccountSummary.md
       - AccountInfoDouble: account/AccountInfoDouble.md
