feat: завершена реализация MT5 подключения и торговли

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,9 @@
 {
     "MT5Options": {
-        "ServerName": "MetaQuotes-Demo",
-        "AccountId": 91817113,
-        "Password": "@g3qCpMt"
+        "AccountId": 21455,
+        "Password": "1nJeS+Ae",
+        "Host": "95.217.147.61",
+        "Port": 443
     },
     "Logging": {
         "LogLevel": {
