--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,11 @@ jobs:
           dotnet tool install -g xmldocmd
           echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-      - name: Generate Markdown from XML Docs
+      - name: Generate Markdown from MetaRPC.MT4 Docs
         run: |
           mkdir -p docs/api
-          xmldocmd bin/Release/net8.0/MetaRPC.CSharpMT5.dll docs/api --source MetaRPC.CSharpMT5.csproj --visibility public
-
+          xmldocmd deps/MetaRPC.MT4.dll docs/api --visibility public
+          
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
