--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: ci
+name: Deploy MkDocs for CSharpMT5
 
 on:
   push:
@@ -8,52 +8,49 @@ on:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: 📦 Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Configure Git
+      - name: ⚙️ Configure Git
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      - name: Setup .NET 8.0 SDK
+      - name: 🧱 Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
 
-      - name: Build C# Project (net8.0)
+      - name: 🔨 Build C# Project (net8.0)
         run: dotnet build MetaRPC.CSharpMT5.csproj -c Release
 
-      - name: Install xmldocmd (.NET tool)
+      - name: 📝 Install xmldocmd (.NET tool)
         run: |
           dotnet tool install -g xmldocmd
           echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-      - name: Generate Markdown from XML Docs
+      - name: 📚 Generate Markdown from XML Docs
         run: |
           mkdir -p docs/api
           xmldocmd bin/Release/net8.0/MetaRPC.CSharpMT5.dll docs/api --source MetaRPC.CSharpMT5.csproj --visibility public
-          
-      - uses: actions/setup-python@v5
+
+      - name: 🐍 Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Cache MkDocs Dependencies
-        run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+      - name: 📦 Install MkDocs and extensions
+        run: |
+          pip install --upgrade pip
+          pip install mkdocs-material pymdown-extensions
 
-      - uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: .cache
-          restore-keys: |
-            mkdocs-material-
-
-      - run: pip install mkdocs-material pymdown-extensions
-
-      - name: Deploy Docs to GitHub Pages
+      - name: 🚀 Deploy Docs to GitHub Pages
         run: mkdocs gh-deploy --force --clean
