--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,9 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
+      - name: 🔄 Restore NuGet packages
+        run: dotnet restore MetaRPC.CSharpMT5.csproj
+
       - name: 🔨 Build C# Project (net8.0)
         run: dotnet build MetaRPC.CSharpMT5.csproj -c Release
 
@@ -40,7 +43,10 @@ jobs:
       - name: 📚 Generate Markdown from XML Docs
         run: |
           mkdir -p docs/api
-          xmldocmd bin/Release/net8.0/MetaRPC.CSharpMT5.dll docs/api --source MetaRPC.CSharpMT5.csproj --visibility public
+          xmldocmd ./bin/Release/net8.0/MetaRPC.CSharpMT5.dll docs/api \
+            --source MetaRPC.CSharpMT5.csproj \
+            --visibility public \
+            --assembly-bin ./bin/Release/net8.0
 
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
