--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,8 @@ jobs:
           xmldocmd ./bin/Release/net8.0/MetaRPC.CSharpMT5.dll docs/api \
             --source MetaRPC.CSharpMT5.csproj \
             --visibility public \
-            --assembly-bin ./bin/Release/net8.0
+            --assembly-bin ./bin/Release/net8.0 \
+            --no-throw
 
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
