--- a/MetaRPC.CSharpMT5.csproj
+++ b/MetaRPC.CSharpMT5.csproj
@@ -9,6 +9,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>1591;1573;1570;1572;1710;1711;1712</NoWarn>
     <WarningsAsErrors></WarningsAsErrors>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
