--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,8 @@
 site_name: MetaRPC MT5 C# Documentation
 
 nav:
-  - "Home": Documentation_BASE.md
+  - Home: Documentation_BASE.md
+  - Getting Started (Registration & First Steps): index.md
 
   - "Core Guides":
       - "Getting Started": Getting_Started.md
