Replace MT5Account.cs with NuGet v1.0.942 and update documentation
Core Changes:
- Replaced MT5Account.cs with decompiled version from NuGet package v1.0.942 (1729 lines)
- Fixed namespace in 74 documentation files: MetaRPC.CSharpMT5 → mt5_term_api
- Fixed namespace in Your_First_Project.ru.md (using mt5_term_api)

Code Fixes:
- Added (uint) casts in MT5Service.cs for sessionIndex parameter (lines 785, 800)
- Fixed examples: Service (removed OrderCalcProfitAsync), Monitor (added 5 sec delay), Scalper (increased SL/TP distance to 30 points)
- Excluded ReflectTool and ReflectMT5Account.cs from compilation

API Documentation:
- Removed AttachByInstanceId from MT5Account.API.md (method not in NuGet v1.0.942)
- Fixed sessionIndex parameter type: int → uint in 4 methods (SymbolInfoSession*)
- Updated method count: 72 → 71

All 13 examples tested and working

--- a/MetaRPC.CSharpMT5.csproj
+++ b/MetaRPC.CSharpMT5.csproj
@@ -40,6 +40,8 @@
     <Compile Remove="Controllers\**\*.cs" />
     <Compile Remove="mrpc-proto-main\**\*.cs" />
     <Compile Remove="PROTO_PRIMER\**\*.cs" />
+    <Compile Remove="ReflectTool\**\*.cs" />
+    <Compile Remove="ReflectMT5Account.cs" />
   </ItemGroup>
 
   <!-- We only copy appsettings.json (if it exists) next to the .exe -->
